name:                 parser
version:              0.1.0.1
synopsis:             Example log parser 
description:          Parses log files for fun and profit.
homepage:             https://github.com/mazelife/logparser_blog_post
license:              AllRightsReserved
license-file:         LICENSE
author:               James Stevenson
maintainer:           jstevenson@safaribooksonline.com
copyright:            2015, Safari Books Online
category:             Data
build-type:           Simple
cabal-version:        >=1.10

executable parser
  ghc-options:        -Wall
                      -O2
                      -fno-warn-unused-do-bind
  default-extensions: OverloadedStrings
  hs-source-dirs:     src
  main-is:            Main.hs  
  build-depends:      base >=4.7 && <4.8,
                      containers >= 0.5.5.1,
                      text >= 1.2.0.0,
                      optparse-applicative >= 0.11.0.1,
                      bytestring >= 0.10.4.0,
                      directory >= 1.2.1.0,
                      attoparsec >= 0.12.1.2,
                      time >= 1.4.2,
                      old-locale >= 1.0.0.6,
                      ua-parser >= 0.5,
                      statistics >= 0.13.2.1,
                      vector >= 0.10.12.1,
                      postgresql-copy-escape >= 0.1,
                      postgresql-simple >= 0.4.8.0
  default-language:   Haskell2010
